# standards

./: .eslintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .standards.yml  .yamllint.yaml  ADOPTION_CHECKLIST.md  CHANGELOG.md  CLAIMS.md  CLAUDE.md  CLEANUP_COMPLETION_REPORT.md  CLOUD_NATIVE_STANDARDS.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  COMPLIANCE_STANDARDS.md  COMPREHENSIVE_STANDARDS.md  COMPREHENSIVE_TESTING_REPORT.md  CONTENT_STANDARDS.md  CONTRIBUTING.md  COST_OPTIMIZATION_STANDARDS.md  CREATING_STANDARDS_GUIDE.md  DATA_ENGINEERING_STANDARDS.md  DEVOPS_PLATFORM_STANDARDS.md  ENHANCEMENT_IMPLEMENTATION_REPORT.md  EVENT_DRIVEN_STANDARDS.md  FINAL_COMPLETION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  FOLLOW-UPS.md  FRONTEND_MOBILE_STANDARDS.md  GEMINI.md  GITHUB_PLATFORM_STANDARDS.md  IMPLEMENTATION_REPORT_PHASE2.md  INTEGRATION_GUIDE.md  KICKSTART_ADVANCED.md  KICKSTART_PROMPT.md  (+49 more)
.claude/: settings.json
.claude/agents/: MIGRATION_SUMMARY.md  README.md  base-template-generator.md
.claude/commands/: README.md  claude-flow-help.md  claude-flow-memory.md  claude-flow-swarm.md  sparc.md
.claude/helpers/: checkpoint-manager.sh  github-safe.js  github-setup.sh  standard-checkpoint-hooks.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECRETS_DOCUMENTATION.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/DISCUSSION_TEMPLATE/: general-discussion.yml  implementation-help.yml  showcase.yml  standards-rfc.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_improvement.yml  feature_request.yml  question.yml  standard.yml  standards_proposal.yml
.github/PULL_REQUEST_TEMPLATE/: README.md  bug_fix.md  documentation_update.md  new_standard.md
.github/workflows/: alerting-system.yml  auto-fix-whitespace.yml  auto-summaries.yml  contributor-recognition.yml  contributor-welcome.yml  daily-health-check.yml  deploy-mkdocs.yml  deploy-pages.yml  feedback-collection.yml  interaction-metrics.yml  kev-watch.yml  lint-and-validate.yml  monitoring-dashboard.yml  monthly-deep-analysis.yml  monthly-recognition.yml  nist-compliance.yml  quality-gates.yml  quarterly-system-review.yml  redundancy-check.yml  regression-testing.yml  release-drafter.yml  repository-health.yml  standards-ci.yml  standards-compliance.yml  standards-validation.yml  task-recommendations.yml  validation.yml  weekly-comprehensive-validation.yml
.nist/: README.md  control-context.json
agents/: README.md
ai-engine/: README.md  adaptive-learning.ts  context-optimizer.ts  index.ts  intelligent-generator.ts  nlp-processor.ts  recommendation-engine.ts
archive/: CLEANUP_REPORT.md  README.md
archive/old-reports/: PHASE2_EXECUTION_SUMMARY.md  PHASE2_FINAL_GATE_DECISION.md  PHASE3_EXECUTION_PLAN.md  PHASE3_SKILLS_SUMMARY.md  PHASE4_COMPLETION_REPORT.md  PHASE4_EXECUTION_PLAN.md  cleanup-validation-report.md  extension-integration-test.md  phase2-final-report.md  phase2-final-status.md  phase2-final-validation.md  phase2-regate-assessment.md  phase2-token-analysis.md  token-metrics.md  vestigial-content-executive-summary.md  workflow-failure-analysis.md
badges/: README.md  generate-dynamic-badge.sh  standards-compliance-template.md
catalogs/: README.md
config/: MANIFEST.yaml  README.md  audit-rules.yaml  product-matrix.yaml  standards-api.json  standards-schema.yaml
data/: kev_latest.json
docs/: AUTOMATION_SCRIPTS_SUMMARY.md  CLAUDE_IMPROVEMENTS_IMPLEMENTATION_REPORT.md  Gemfile  Gemfile.local  HIVE_MIND_SESSION_SUMMARY.md  IMPLEMENTATION_PROGRESS_REPORT.md  README.md  SKILLS_CATALOG.md  VISUAL_NAVIGATION.md  WORKFLOW_ANALYSIS_REPORT.md  WORKFLOW_STATUS_SUMMARY.md  _config.yml  implementation-notes.md  index.md  search.json  watchers.md
docs/_includes/: head-custom.html
examples/: README.md  project_plan_example.md
examples/project-templates/python-project/: .flake8  README.md  pyproject.toml
lint/: README.md  custom-rules.js  setup-hooks.sh  standards-linter.py
memory/: README.md
micro/: CS-api.micro.md  README.md  SEC-auth.micro.md  TS-unit.micro.md
monitoring/: README.md  analytics_collector.py  automated_reports.py  dashboard.html  dashboard_server.py  health_monitor.py  log_rotation.sh  performance_monitor.py  requirements.txt  run_monitoring.sh  setup_monitoring.py  start_dashboard.sh
profiles/: README.md
prompts/: README.md
reports/: README.md  healthtech-refactoring-summary.md
scripts/: README.md  add-universal-sections.py  analyze-skills-compliance.py  auto-fix-links.py  batch-optimize-skills.py  calculate_compliance_score.py  check-claim-anchors.sh  check-kev-updates.js  check_whitespace.sh  claude-doctor.py  cleanup-vestigial-artifacts.sh  condense-aws-skill.py  condense-k8s-skill.py  count-tokens.py  create-skill-directories.sh  discover-skills.py  ensure-hub-links.py  fix-anthropic-compliance.py  fix-claude-references.py  fix-critical-quality-issues.sh  fix-documentation-accuracy.py  fix-final-broken-links.py  fix-final-readmes.py  fix-hub-violations.py  fix-remaining-links.py  fix-skill-frontmatter.py  generate-audit-reports.py  generate-badges.sh  generate-readmes.py  generate-skill.py  generate-standards-inventory.py  generate_digest.py  generate_reference.py  generate_standards_index.py  generate_summary.py  inject-unified-crossref.py  migrate-to-skills.py  migrate-to-v2.py  nist-pre-commit.sh  optimize-fintech-skill.py  (+23 more)
skills/: README.md
skills/coding-standards/python/resources/configs/: .pre-commit-config.yaml  pyproject.toml
standards/: README.md  registry.json
subagents/: README.md
templates/: KICKSTART_REPO.md  PROJECT_PLAN_TEMPLATE.md  README.md
tests/: README.md  TDD_TEST_SPECIFICATION.md  conftest.py  fix_validation_issues.py  test-cleanup-scripts.sh  test_redundancy.py  test_skill_loader_comprehensive.py  validate-pages.spec.js  validate_cross_references.py  validate_knowledge_management.sh  validate_token_efficiency.py
tools-config/: README.md  github-actions-python.yml  semgrep.yaml  trivy.yaml
(+913 files in other folders)
